force-app/main/default/objects/maps__DriveProfile__c/maps__DriveProfile__c.object-meta.xml
<CustomObject>
    <label>Maps Drive Profile</label>
    <nameField>
        <label>Drive Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Drive Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>