force-app/main/default/objects/maps__DriveProfile__c/fields/maps__Hazardous_Materials__c.field-meta.xml
<CustomField>
    <fullName>maps__Hazardous_Materials__c</fullName>
    <label>Hazardous Materials</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>