force-app/main/default/objects/maps__DriveProfile__c/fields/maps__Height__c.field-meta.xml
<CustomField>
    <fullName>maps__Height__c</fullName>
    <label>Height</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>