force-app/main/default/objects/maps__DriveProfile__c/fields/maps__HeightUnits__c.field-meta.xml
<CustomField>
    <fullName>maps__HeightUnits__c</fullName>
    <label>Height Units</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Feet</fullName>
            </value>
            <value>
                <fullName>meters</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>