force-app/main/default/objects/maps__DriveProfile__c/fields/maps__Length__c.field-meta.xml
<CustomField>
    <fullName>maps__Length__c</fullName>
    <label>Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>