force-app/main/default/objects/maps__DriveProfile__c/fields/maps__NumberOfAxles__c.field-meta.xml
<CustomField>
    <fullName>maps__NumberOfAxles__c</fullName>
    <label>Number of Axles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>