force-app/main/default/objects/maps__DriveProfile__c/fields/maps__NumberOfTrailers__c.field-meta.xml
<CustomField>
    <fullName>maps__NumberOfTrailers__c</fullName>
    <label>Number of Trailers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>