force-app/main/default/objects/maps__DriveProfile__c/fields/maps__Weight__c.field-meta.xml
<CustomField>
    <fullName>maps__Weight__c</fullName>
    <label>Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>