force-app/main/default/objects/maps__DriveProfile__c/fields/maps__WeightUnits__c.field-meta.xml
<CustomField>
    <fullName>maps__WeightUnits__c</fullName>
    <label>Weight Units</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>pounds</fullName>
            </value>
            <value>
                <fullName>tons</fullName>
            </value>
            <value>
                <fullName>kilos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>