force-app/main/default/objects/maps__DriveProfile__c/fields/maps__Width__c.field-meta.xml
<CustomField>
    <fullName>maps__Width__c</fullName>
    <label>Width</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>