force-app/main/default/objects/maps__DriveProfile__c/listViews/maps__All.listView-meta.xml
<ListView>
    <fullName>maps__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>